--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,22 +10,23 @@
                 <div class="background-pattern"></div>
                 <div class="position-relative z-1">
                     <!-- Avatar -->
+                    <!-- Avatar -->
                     <div class="mb-4 position-relative d-inline-block">
                         <div class="avatar-container position-relative">
-                            <img
-                                src="{% if user[5] %}
-                                {{ url_for('static', filename='profile_pics/' ~ user[5]) }}
-                                {% else %}
-                                {{ user[3] | gravatar }}
-                                {% endif %}"
-                                alt="{{ user[1] }} {{ user[2] }}"
-                                class="avatar-img rounded-circle border border-4 border-white shadow-lg"
-                            >
+                            <img src="{% if user_info and user_info[12] and user_info[12] != 'default.jpg' %}
+                    {{ url_for('static', filename='profile_pics/' + user_info[12]) }}
+                  {% else %}
+                    {{ user[3] | gravatar }}
+                  {% endif %}"
+                                 alt="{{ user[1] }} {{ user[2] }}"
+                                 class="avatar-img rounded-circle border border-4 border-white shadow-lg"
+                                 onerror="this.src='{{ user[3] | gravatar }}'">
                             <span class="online-status position-absolute bottom-0 end-0 bg-success rounded-circle border border-3 border-white"></span>
                         </div>
                         {% if current_user.id == user[0] %}
                         <div class="mt-3">
-                            <a href="{{ url_for('upload_profile_pic') }}" class="btn btn-light btn-sm rounded-pill px-3">
+                            <a href="{{ url_for('upload_profile_pic') }}"
+                               class="btn btn-light btn-sm rounded-pill px-3">
                                 <i class="bi bi-camera me-1"></i>Change Photo
                             </a>
                         </div>
@@ -238,7 +239,8 @@
                 </div>
                 {% else %}
                 <div class="d-flex justify-content-center gap-3 mb-5 flex-wrap">
-                    <a href="{{ url_for('edit_profile') }}" class="btn btn-outline-secondary rounded-pill px-4 py-2 fw-bold action-btn">
+                    <a href="{{ url_for('edit_profile') }}"
+                       class="btn btn-outline-secondary rounded-pill px-4 py-2 fw-bold action-btn">
                         <i class="bi bi-pencil me-2"></i> Edit Profile
                     </a>
                     <a href="{{ url_for('change_password') }}"
